Modificando background color e adicionando script externo para main.js.

--- a/pages/login.html
+++ b/pages/login.html
@@ -306,6 +306,8 @@
       </div>
     </main>
 
+    <script src="../js/main.js"></script> <!-- teste --- Link para o arquivo JS -->
+
     <!-- ================= RODAPÉ NAO ALTERAR ================= -->
     <footer class="footer-swift text-light">
       <div class="container">
