adicionando script externo para main.js + incluindo "guard" no bloco entrega/retirada.

--- a/pages/cadastro.html
+++ b/pages/cadastro.html
@@ -362,6 +362,10 @@
         </form>
       </div>
     </main>
+
+    <script src="../js/main.js"></script>
+
+
     <footer class="footer-swift text-light">
       <div class="container">
         <!-- topo: colunas -->
